--- a/AetherhubEloFunctions/AetherhubEloFunctions.csproj
+++ b/AetherhubEloFunctions/AetherhubEloFunctions.csproj
@@ -7,6 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Google.Cloud.Firestore" Version="3.10.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="9.0.3" />
+      <PackageReference Include="Telegram.Bot" Version="22.4.4" />
       <PackageReference Include="yandexcloudfunctions.net.sdk" Version="0.0.7" />
     </ItemGroup>
 
