fix passing env variables

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,3 +19,4 @@ jobs:
       YC_OAUTH_TOKEN: ${{ secrets.YC_OAUTH_TOKEN }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      FUNC_ENV_VARIABLES: ${{ secrets.FUNC_ENV_VARIABLES }}
