--- a/AetherhubEloFunctions/AetherhubEloFunctions.csproj
+++ b/AetherhubEloFunctions/AetherhubEloFunctions.csproj
@@ -7,8 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AngleSharp" Version="1.2.0" />
       <PackageReference Include="Google.Cloud.Firestore" Version="3.10.0" />
-      <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="9.0.3" />
+      <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.3" />
       <PackageReference Include="Telegram.Bot" Version="19.0.0" />
       <PackageReference Include="yandexcloudfunctions.net.sdk" Version="0.0.9" />
     </ItemGroup>
