--- a/AetherhubEloFunctions/AetherhubEloFunctions.csproj
+++ b/AetherhubEloFunctions/AetherhubEloFunctions.csproj
@@ -14,4 +14,8 @@
       <PackageReference Include="yandexcloudfunctions.net.sdk" Version="0.1.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Content Include="NameRecognition/*.txt" CopyToOutputDirectory="Always" />
+    </ItemGroup>
+
 </Project>
