--- a/AetherhubEloFunctions/AetherhubEloFunctions.csproj
+++ b/AetherhubEloFunctions/AetherhubEloFunctions.csproj
@@ -11,6 +11,7 @@
       <PackageReference Include="Google.Cloud.Firestore" Version="3.12.0" />
       <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.1" />
       <PackageReference Include="Telegram.Bot" Version="22.7.5" />
+      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
       <PackageReference Include="yandexcloudfunctions.net.sdk" Version="0.1.3" />
     </ItemGroup>
 
