--- a/AetherhubEloFunctions.Tests/AetherhubEloFunctions.Tests.csproj
+++ b/AetherhubEloFunctions.Tests/AetherhubEloFunctions.Tests.csproj
@@ -10,19 +10,25 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="coverlet.collector" Version="6.0.4"/>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1"/>
-        <PackageReference Include="NUnit" Version="4.4.0"/>
-        <PackageReference Include="NUnit.Analyzers" Version="4.11.2"/>
-        <PackageReference Include="NUnit3TestAdapter" Version="5.2.0"/>
+        <PackageReference Include="coverlet.collector" Version="6.0.4" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
+        <PackageReference Include="NUnit" Version="4.4.0" />
+        <PackageReference Include="NUnit.Analyzers" Version="4.11.2" />
+        <PackageReference Include="NUnit3TestAdapter" Version="5.2.0" />
     </ItemGroup>
 
     <ItemGroup>
-        <Using Include="NUnit.Framework"/>
+        <Using Include="NUnit.Framework" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\AetherhubEloFunctions\AetherhubEloFunctions.csproj" />
+        <ProjectReference Include="..\AetherhubEloFunctions\AetherhubEloFunctions.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Update="tourneys-list.html">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 </Project>
