--- a/AetherhubEloFunctions/AetherhubEloFunctions.csproj
+++ b/AetherhubEloFunctions/AetherhubEloFunctions.csproj
@@ -7,11 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="AngleSharp" Version="1.4.0" />
+      <PackageReference Include="AngleSharp" Version="1.3.1" />
       <PackageReference Include="Google.Cloud.Firestore" Version="3.12.0" />
+      <PackageReference Include="jose-jwt" Version="5.2.0" />
       <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.1" />
       <PackageReference Include="Telegram.Bot" Version="22.7.5" />
-      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0" />
       <PackageReference Include="yandexcloudfunctions.net.sdk" Version="0.1.3" />
     </ItemGroup>
 
