revert google storage configuration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "Aetherhub",
         "communix",
-        "Communixes"
+        "Communixes",
+        "Firestore"
     ]
 }
