--- a/AetherhubEloFunctions.Tests/AetherhubEloFunctions.Tests.csproj
+++ b/AetherhubEloFunctions.Tests/AetherhubEloFunctions.Tests.csproj
@@ -31,6 +31,9 @@
         <None Update="tourneys-list.html">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+        <None Update="tourney.html">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
         <None Update="YandexCloud\yandex-cloud-settings.json">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
